[gd_scene load_steps=3 format=3 uid="uid://b018smmj42d83"]

[ext_resource type="Script" uid="uid://5ilamtyy3bni" path="res://Scripts/General Scripts/GameOverUI.gd" id="1_4rhkh"]

[sub_resource type="Theme" id="Theme_7mnph"]
default_font_size = 60

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_4rhkh")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 409.0
offset_top = 155.0
offset_right = 772.0
offset_bottom = 412.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="GameOver" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_7mnph")
text = "GAME OVER"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Final Score: 	"

[node name="FinalScore" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Quit"
